Dev: fix z-index issue for status column

--- a/assets/admin_themes/Sea_Green/tables/tables.scss
+++ b/assets/admin_themes/Sea_Green/tables/tables.scss
@@ -161,6 +161,7 @@ table {
             //text-align : center;
             padding    : 7px 20px;
             box-shadow : none;
+            z-index: 1;
         }
         thead {
             tr {
